<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:theme="@style/ThemeOverlay.AppCompat.Dark" android:gravity="bottom" android:orientation="vertical" android:background="@drawable/side_nav_bar" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="match_parent" android:layout_height="@dimen/nav_header_height">
    <ImageView
        android:id="@+id/imageView"
        android:background="@mipmap/ic_laucher"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/nav_header_desc"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="9">
                <TextView
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:id="@+id/txt_name"
                    android:paddingTop="@dimen/nav_header_vertical_spacing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nav_header_title"/>
                <TextView android:id="@+id/txt_branch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nav_header_subtitle"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/img_test"
            android:background="@drawable/ic_nav_header_main_switch_branch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/todo" />
    </LinearLayout>
</LinearLayout>
